--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^3.4.0"
   },
   "scripts": {
